pix->table, citation#s, spellchk ok okay

--- a/paper1.tex
+++ b/paper1.tex
@@ -21,7 +21,7 @@
 \setlength{\baselineskip}{1.5\baselineskip}
 %This is modus operandi bc as the paper evolves, the abstract changes invariably
 \noindent
-Man\_In\_The\_Middle-ware, (MITM)[14][15][20] is a rapidly growing field of website spoofing that is a challenge for everyone, especially for MITM mitigation and deterrence  developers to keep up with. Many papers have been published that explain the nuances, methods and lengths that the attackers use for "personal gain". According to [1], fairly spectacular results in detecting a MITM attack has been shown. This was accomplished by the group gathering attack data, metrics of the attacks, and analysis for many months, to eventually develop a custom phishing toolkit they named "phoca". That said, the target of our research is two-fold. Firstly, we show improvement in the Stonybrook claim via our novel composite-type methodology using COTP[13].  Secondly, we claim and show that despite Stonybrook's claim, it is possible and provable that application level checks based on easily acccessible and well known network level features along with a secret, can indeed determine with fine granularity, a MITM or !MITM. Ie., an efficient and novel server authentication factor has been developed.  
+Man\_In\_The\_Middle-ware, (MITM)[14][15][20] is a rapidly growing field of website spoofing that is a challenge for everyone, especially for MITM mitigation and deterrence  developers to keep up with. Many papers have been published that explain the nuances, methods and lengths that the attackers use for "personal gain". According to [1], fairly spectacular results in detecting a MITM attack has been shown. This was accomplished by the group gathering attack data, metrics of the attacks, and analysis for many months, to eventually develop a custom phishing toolkit they named "phoca". That said, the target of our research is two-fold. Firstly, we show improvement in the Stonybrook claim via our novel composite-type methodology using COTP[13].  Secondly, we claim and show that despite Stonybrook's claim, it is possible and provable that application level checks based on easily accessible and well known network level features along with a secret, can indeed determine with fine granularity, a MITM or !MITM. Ie., an efficient and novel server authentication factor has been developed.  
 
 
 
@@ -356,7 +356,7 @@ Although TLS features only gave great reproducibility in regards to COTPs [13] i
 
 Combining TLS and TCP features makes the attacker not only brute force the cipher-suite (and the shared secret, and within the timeframe), but they must now also match connection latencies. The MITM needs to literally be in the middle, in terms of latency to both server and client. This is much more difficult, as they could be closer to one party over the other and must compensate. Due to connection information being unencrypted and public, it's not impossible for a motivated attacker to find hosts equidistant - but requires much more effort.
 
-Choosing a window that doesn't typically happen, and that is large enough that small differences don't end up in different timing windows is critical. This work uses a prime number of 7ms to generate windows. Although other primes could be used, 7ms was the sweet spot for this experiment. Note: a similar approach to generating windows in TOTP is done, a integer division is used to determine the window a particular latency belongs too. (See code for reference)
+Choosing a window that doesn't typically happen, and that is large enough that small differences don't end up in different timing windows is critical. This work uses a prime number of 7ms to generate windows. Although other primes could be used, 7ms was the sweet spot for this experiment. Note: a similar approach to generating windows in TOTP is done, an integer division is used to determine the window a particular latency belongs too. (See code for reference)
 
 The client consistently reported longer latencies than the server. This may have been an artifact of the reverse proxy.
 
@@ -381,7 +381,7 @@ Future work includes further addressing timing discrepancies between server and 
 
 Another potential future work is finding the optimal balance between connection oriented details and other factors. This work focused on introducing connection oriented features to a verification algorithm. This is by using only shared features between both parties, however there are additional features that are shared, which can be included. One such additional feature is each party's supported cipher suite, or, another is the selected curve - and both could increase difficultly for an advanced transparent MITM to successfully mimmic all details symmetrically. However, the increase in difficultly also needs to be assessed. Another issue is balance between authentication features, ie., a completely connection-oriented approach will fail, due to connection details being publicly available to a motivated attacker through protocol analysis.
 
-Finally, another future work is potientialy repeatedly validating or checking factors periodically. TLS addresses forward secrecy through rekeying, and this happens to be part of the protocol. The same process could trigger a transparent COTP generation and exchange. This type of feature is already possible on the browser side, and could be implemented on the server side as well. In addition, a new shared secret could be generated and shared upon rekeying, forward authentication is allowed. Those with access to previous details would not have future authentication. 
+Finally, another future work is potentially repeatedly validating or checking factors periodically. TLS addresses forward secrecy through rekeying, and this happens to be part of the protocol. The same process could trigger a transparent COTP generation and exchange. This type of feature is already possible on the browser side, and could be implemented on the server side as well. In addition, a new shared secret could be generated and shared upon rekeying, forward authentication is allowed. Those with access to previous details would not have future authentication. 
 
 
 
