pix->table, citation#s, spellchk now ok okay

--- a/paper1.tex
+++ b/paper1.tex
@@ -270,7 +270,7 @@ Please refer to [6]
 \begin{center}
 \begin{tabular}{||c c c ||} 
  \hline
- Col1 & Col2 & Col3 \\ [0.5ex] 
+ SvrRTTms & ClientRTTms & Diff \\ [0.5ex] 
  \hline\hline
  21 & 22 & 1 \\ 				%21 22 1
  \hline
